src/llvm/wrapper/core.nim


# proc getDebugLocColumn*(val: ValueRef): cuint {.cdecl, importc: "LLVMGetDebugLocColumn", dynlib: LLVMlib.}
#     ##  Return the column number of the debug location for this value, which must be
#     ##  an llvm::Instruction.
#     ##
#     ##  @see llvm::Instruction::getDebugLoc()

proc addFunction*(self: Module, name: string, fnty: FunctionType): FunctionValue =
    ##  Add a function to a module under a specified name.
    ## 
    ##  Wrapping:
    ##  * `addFunction(Moduleref, cstring, TypeRef)<../llvm/Core.html#addFunction,ModuleRef,cstring,TypeRef>`_
    runnableExamples:
        import llvm

        var
            `mod` = newModule("main")
            fnty = functionType(voidType(), @[])
            fn = `mod`.addFunction("test", fnty)

        assert $`mod` == """; ModuleID = 'main'
source_filename = "main"

declare void @test()
"""
    assert fnty.kind == FunctionTypeKind
    newValue[FunctionValue](self.module.addFunction(name, fnty.typ))

# proc getNamedFunction*(m: ModuleRef; name: cstring): ValueRef {.cdecl, importc: "LLVMGetNamedFunction", dynlib: LLVMlib.}
#     ##  Obtain a Function value from a Module by its name.
#     ##
#     ##  The returned value corresponds to a llvm::Function value.
#     ##
#     ##  @see llvm::Module::getFunction()

# proc getFirstFunction*(m: ModuleRef): ValueRef {.cdecl, importc: "LLVMGetFirstFunction", dynlib: LLVMlib.}
#     ##  Obtain an iterator to the first Function in a Module.
#     ##
#     ##  @see llvm::Module::begin()
proc firstFunction*(m: Module): FunctionValue =
    newValue[FunctionValue](m.module.getFirstFunction())

# proc getLastFunction*(m: ModuleRef): ValueRef {.cdecl, importc: "LLVMGetLastFunction", dynlib: LLVMlib.}
#     ##  Obtain an iterator to the last Function in a Module.
#     ##
#     ##  @see llvm::Module::end()
proc lastFunction*(m: Module): FunctionValue =
    newValue[FunctionValue](m.module.getLastFunction())

# proc getNextFunction*(fn: ValueRef): ValueRef {.cdecl, importc: "LLVMGetNextFunction", dynlib: LLVMlib.}
#     ##  Advance a Function iterator to the next Function.
#     ##
#     ##  Returns NULL if the iterator was already at the end and there are no more
#     ##  functions.
proc nextFunction*(v: FunctionValue): FunctionValue =
    let a = v.value.getNextFunction()
    if a.isNil:
        nil
    else:
        newValue[FunctionValue](a)

iterator funcs*(m: Module): FunctionValue =
    var ret = m.firstFunction
    while not ret.isNil:
        yield ret
        ret = ret.nextFunction

# proc getPreviousFunction*(fn: ValueRef): ValueRef {.cdecl, importc: "LLVMGetPreviousFunction", dynlib: LLVMlib.}
#     ##  Decrement a Function iterator to the previous Function.
#     ##
#     ##  Returns NULL if the iterator was already at the beginning and there are
#     ##  no previous functions.

# proc setModuleInlineAsm*(m: ModuleRef; `asm`: cstring) {.cdecl, importc: "LLVMSetModuleInlineAsm", dynlib: LLVMlib.}
#     ## * Deprecated: Use LLVMSetModuleInlineAsm2 instead.



# REGION: Type

proc kind*(self: Type): TypeKind =
    ##  Obtain the enumerated type of a Type instance.
    ## 
    ##  Wrapping:
    ##  * `getTypeKind(TypeRef)<../llvm/Core.html#getTypeKind,TypeRef>`_
    runnableExamples:
        from llvm/raw import getTypeKind

        var
            llInt = intType(113)

        assert llInt.kind == llInt.typ.getTypeKind()
    self.kind

proc isSized*(self: Type): bool =
    ##  Whether the type has a known size.
    ##
    ##  Things that don't have a size are abstract types, labels, and void.a
    ##  Wrapping:
    ##  * `typeIsSized(TypeRef)<../llvm/Core.html#typeIsSized,TypeRef>`_
    runnableExamples:
        assert intType(113).isSized
        assert not voidType().isSized
        assert not functionType(voidType(), @[]).isSized
    self.typ.typeIsSized()

# proc getTypeContext*(ty: TypeRef): ContextRef {.cdecl, importc: "LLVMGetTypeContext", dynlib: LLVMlib.}
#     ##  Obtain the context to which this type instance is associated.
#     ##
#     ##  @see llvm::Type::getContext()

proc dump*(self: Type) =
    ##  Dump a representation of a type to stderr.
    ## 
    ##  Wrapping:
    ##  * `dumpType(TypeRef)<../llvm/Core.html#dumpType,TypeRef>`_
    self.typ.dumpType()

proc `$`*(self: Type): string =
    ##  Return a string representation of the type. Use
    ## 
    ##  Wrapping:
    ##  * `printTypeToString(TypeRef)<../llvm/Core.html#printTypeToString,TypeRef>`_
    runnableExamples:
        var
            llInt = intType(113)
                
        assert $llInt == "i113"
    var
        tmp = self.typ.printTypeToString()
    result = $tmp
    tmp.disposeMessage()


# ##  Functions in this section operate on integer types.

# ##  Obtain an integer type from a context with specified bit width.
# proc int1TypeInContext*(c: ContextRef): TypeRef {.cdecl, importc: "LLVMInt1TypeInContext", dynlib: LLVMlib.}
# proc int8TypeInContext*(c: ContextRef): TypeRef {.cdecl, importc: "LLVMInt8TypeInContext", dynlib: LLVMlib.}
# proc int16TypeInContext*(c: ContextRef): TypeRef {.cdecl, importc: "LLVMInt16TypeInContext", dynlib: LLVMlib.}
# proc int32TypeInContext*(c: ContextRef): TypeRef {.cdecl, importc: "LLVMInt32TypeInContext", dynlib: LLVMlib.}
# proc int64TypeInContext*(c: ContextRef): TypeRef {.cdecl, importc: "LLVMInt64TypeInContext", dynlib: LLVMlib.}
# proc int128TypeInContext*(c: ContextRef): TypeRef {.cdecl, importc: "LLVMInt128TypeInContext", dynlib: LLVMlib.}
# proc intTypeInContext*(c: ContextRef; numBits: cuint): TypeRef {.cdecl, importc: "LLVMIntTypeInContext", dynlib: LLVMlib.}

proc intType*(cxt: Context, nbits: uint): IntegerType =
    ##  Obtain an integer type from the global context with a specified bit
    ##  width.
    ## 
    ##  Wrapping:
    ##  * `intTypeInContext(cuint)<../llvm/Core.html#intTypeInContext,ContextRef,cuint>`_
    runnableExamples:
        var
            cxt = globalContext()
            llInt = cxt.intType(113)

        assert $llInt == "i113"
    newType[IntegerType](cxt.context.intTypeInContext(cuint nbits))

# ##  Obtain an integer type from the global context with a specified bit
# ##  width.
# proc int1Type*(): TypeRef {.cdecl, importc: "LLVMInt1Type", dynlib: LLVMlib.}
# proc int8Type*(): TypeRef {.cdecl, importc: "LLVMInt8Type", dynlib: LLVMlib.}
# proc int16Type*(): TypeRef {.cdecl, importc: "LLVMInt16Type", dynlib: LLVMlib.}
# proc int32Type*(): TypeRef {.cdecl, importc: "LLVMInt32Type", dynlib: LLVMlib.}
# proc int64Type*(): TypeRef {.cdecl, importc: "LLVMInt64Type", dynlib: LLVMlib.}
# proc int128Type*(): TypeRef {.cdecl, importc: "LLVMInt128Type", dynlib: LLVMlib.}
proc intType*(nbits: uint): IntegerType =
    ##  Obtain an integer type from the global context with a specified bit
    ##  width.
    ## 
    ##  Wrapping:
    ##  * `intType(cuint)<../llvm/Core.html#intType,cuint>`_
    runnableExamples:
        var
            llInt = intType(113)

        assert $llInt == "i113"
    newType[IntegerType](intType(cuint nbits))
# proc getIntTypeWidth*(integerTy: TypeRef): cuint {.cdecl, importc: "LLVMGetIntTypeWidth", dynlib: LLVMlib.}


# proc halfTypeInContext*(c: ContextRef): TypeRef {.cdecl, importc: "LLVMHalfTypeInContext", dynlib: LLVMlib.}
#     ##  Obtain a 16-bit floating point type from a context.

# proc floatTypeInContext*(c: ContextRef): TypeRef {.cdecl, importc: "LLVMFloatTypeInContext", dynlib: LLVMlib.}
#     ##  Obtain a 32-bit floating point type from a context.
proc floatType*(cxt: Context): FloatType =
    newType[FloatType](floatTypeInContext(cxt.context))

# proc doubleTypeInContext*(c: ContextRef): TypeRef {.cdecl, importc: "LLVMDoubleTypeInContext", dynlib: LLVMlib.}
#     ##  Obtain a 64-bit floating point type from a context.

# proc x86FP80TypeInContext*(c: ContextRef): TypeRef {.cdecl, importc: "LLVMX86FP80TypeInContext", dynlib: LLVMlib.}
#     ##  Obtain a 80-bit floating point type (X87) from a context.

# proc fP128TypeInContext*(c: ContextRef): TypeRef {.cdecl, importc: "LLVMFP128TypeInContext", dynlib: LLVMlib.}
#     ##  Obtain a 128-bit floating point type (112-bit mantissa) from a
#     ##  context.

# proc pPCFP128TypeInContext*(c: ContextRef): TypeRef {.cdecl, importc: "LLVMPPCFP128TypeInContext", dynlib: LLVMlib.}
#     ##  Obtain a 128-bit floating point type (two 64-bits) from a context.


# ##  Obtain a floating point type from the global context.
# ##
# ##  These map to the functions in this group of the same name.
# proc halfType*(): TypeRef {.cdecl, importc: "LLVMHalfType", dynlib: LLVMlib.}
# proc floatType*(): TypeRef {.cdecl, importc: "LLVMFloatType", dynlib: LLVMlib.}
# proc doubleType*(): TypeRef {.cdecl, importc: "LLVMDoubleType", dynlib: LLVMlib.}
# proc x86FP80Type*(): TypeRef {.cdecl, importc: "LLVMX86FP80Type", dynlib: LLVMlib.}
# proc fP128Type*(): TypeRef {.cdecl, importc: "LLVMFP128Type", dynlib: LLVMlib.}
# proc pPCFP128Type*(): TypeRef {.cdecl, importc: "LLVMPPCFP128Type", dynlib: LLVMlib.}


proc functionType*(retTy: Type, paramTypes: openArray[Type], isVarArg: bool = false): FunctionType =
    ##  Obtain a function type consisting of a specified signature.
    ##
    ##  The function is defined as a tuple of a return Type, a list of
    ##  parameter types, and whether the function is variadic.
    ## 
    ##  Wrapping:
    ##  * `functionType(TypeRef, ptr TypeRef, cuint, Bool)<../llvm/Core.html#functionType,TypeRef,ptr.TypeRef,cuint,Bool>`_
    runnableExamples:
        var
            fnty = functionType(voidType(), (@[Type intType(64), intType(32)]))

        assert $fnty == "void (i64, i32)"
    runnableExamples:
        var
            fnty = functionType(intType(32), @[])

        assert $fnty == "i32 ()"
    var
        s = paramTypes.map(proc(a: Type): TypeRef = a.typ)
        adr = if s.len > 0: s[0].addr else: nil
    newType[FunctionType](functionType(retTy.typ, adr, cuint s.len, isVarArg))

# proc isFunctionVarArg*(functionTy: TypeRef): Bool {.cdecl, importc: "LLVMIsFunctionVarArg", dynlib: LLVMlib.}
#     ##  Returns whether a function type is variadic.

# proc getReturnType*(functionTy: TypeRef): TypeRef {.cdecl, importc: "LLVMGetReturnType", dynlib: LLVMlib.}
#     ##  Obtain the Type this function Type returns.

# proc countParamTypes*(functionTy: TypeRef): cuint {.cdecl, importc: "LLVMCountParamTypes", dynlib: LLVMlib.}
#     ##  Obtain the number of parameters this function accepts.

# proc getParamTypes*(functionTy: TypeRef; dest: ptr TypeRef) {.cdecl, importc: "LLVMGetParamTypes", dynlib: LLVMlib.}
#     ##  Obtain the types of a function's parameters.
#     ##
#     ##  The Dest parameter should point to a pre-allocated array of
#     ##  LLVMTypeRef at least LLVMCountParamTypes() large. On return, the
#     ##  first LLVMCountParamTypes() entries in the array will be populated
#     ##  with LLVMTypeRef instances.
#     ##
#     ##  @param FunctionTy The function type to operate on.
#     ##  @param Dest Memory address of an array to be filled with result.


# ##  These functions relate to LLVMTypeRef instances.
# ##
# ##  @see llvm::StructType
proc createStruct*(cxt: Context, elementTypes: openArray[Type], packed: bool = false): StructType =
    ##  Create a new structure type in a context.
    ##
    ##  A structure is specified by a list of inner elements/types and
    ##  whether these can be packed together.
    ## 
    ##  Wrapping:
    ##  * `structTypeInContext(cxt: Context, elementTypes: openArray[Type], packed: bool)<../llvm/Core.html#structTypeInContext,ContextRef,ptr.TypeRef,cuint,Bool>`_
    var
        s = elementTypes.map(proc(a: Type): TypeRef = a.typ)
        adr = if s.len > 0: s[0].addr else: nil
    newType[StructType](structTypeInContext(cxt.context, adr, cuint s.len, packed))
